--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-toastify": "^9.1.1",
-    "react-uuid": "^2.0.0"
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
