--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sanity/client": "^5.4.1",
+    "@sanity/image-url": "^1.0.2",
     "airtable": "^0.11.6",
     "axios": "^1.3.1",
-    "firebase": "^9.17.1",
+    "firebase": "^9.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.7.0",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.1.2",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
